<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Stock settings</string>
    <string name="general_title">General</string>
    <string name="display_title">Display</string>
    <string name="sound_title">Sound</string>
    <string name="category_cpu_title">CPU</string>
    <string name="cpu_deepidle_title_head">Deep idle</string>
    <string name="cpu_deepidle_summary_head">Enable deep idle</string>
    <string name="category_screen_title">WM8994 settings (Voodoo)</string>
    <string name="color_tuning_title_head">Color multipliers tuning</string>
    <string name="color_tuning_summary_head">Calibrate screen color multipliers</string>
    <string name="gamma_tuning_title_head">Color gamma tuning</string>
    <string name="gamma_tuning_summary_head">Calibrate gamma color correction</string>
    <string name="color_hack_presets_title_head">Color hack presets</string>
    <string name="color_hack_presets_summary_head">Presets for gamma and multipliers</string>
    <string name="color_red_title">Red</string>
    <string name="color_green_title">Green</string>
    <string name="color_blue_title">Blue</string>
    <string name="gamma_default_title">Default</string>
    <string name="gamma_CM_title">CM sett.</string>
    <string name="gamma_bright_title">Bright sett.</string>
    <string name="color_default_title">Default</string>
    <string name="color_CM_title">CM sett.</string>
    <string name="color_dark_title">Dark sett.</string>
    <string name="bld_title">BLD</string>
    <string name="bld_tuning_title_head">BLD tuning</string>
    <string name="bld_tuning_summary_head">Set the time to turn off touch key lights (0 means no BLD)</string>
    <string name="preset1_default_title">Default</string>
    <string name="preset2_default_title">Natural</string>
    <string name="preset3_default_title">Dark blue</string>
    <string name="preset4_default_title">Warm</string>
    <string name="preset5_default_title">Dark cold</string>
    <string name="preset6_default_title">Cross proc.</string>
    <string name="credits_presets">Credits: ale.landra91 cpaixao provolinoo</string>
    <string name="category_touchkey_title">Touch keys</string>
    <string name="touchkey_notification_title_head">Backlight notifications</string>
    <string name="touchkey_notification_summary_head">The touch key backlights will turn on when there is a notification</string>
    <string name="category_radio_title">Radio</string>
    <string name="hspa_title_head">HSPA</string>
    <string name="hspa_summary_head">Enable HSDPA/HSUPA</string>
    <string name="label_deepidle_stats">Idle stats</string>
    <string name="label_state">State</string>
    <string name="label_time">Time (ms)</string>
    <string name="label_average">Avg (ms)</string>
    <string name="label_reset">Reset</string>
    <string name="label_close">Close</string>
    <string name="label_idle1">Idle</string>
    <string name="label_idle2">Deep idle (TOP=ON)</string>
    <string name="label_idle3">Deep idle (TOP=OFF)</string>
</resources>
