<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/category_cpu_title" android:key="category_cpu">
        <CheckBoxPreference android:title="@string/cpu_deepidle_title_head" android:key="deepidle" android:summary="@string/cpu_deepidle_summary_head" />
        <PreferenceScreen android:title="@string/label_deepidle_stats" android:key="deepidle_stats" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/category_touchkey_title" android:key="category_touchkey">
        <CheckBoxPreference android:title="@string/touchkey_notification_title_head" android:key="touchkey_notification" android:summary="@string/touchkey_notification_summary_head" />
        <com.cyanogenmod.settings.device.bldTuningPreference android:title="@string/bld_tuning_title_head" android:key="bld_tuning" android:summary="@string/bld_tuning_summary_head" />
    </PreferenceCategory>
</PreferenceScreen>