<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center_horizontal" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:id="@id/imageView0" android:paddingLeft="20.0dip" android:paddingTop="5.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="200.0dip" android:src="@drawable/color_tuning_preview" />
        <ImageView android:id="@id/imageView1" android:paddingLeft="20.0dip" android:paddingTop="5.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="50.0dip" android:src="@drawable/red_tuning_preview" />
        <ImageView android:id="@id/imageView2" android:paddingLeft="20.0dip" android:paddingTop="5.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="50.0dip" android:src="@drawable/green_tuning_preview" android:layout_below="@id/imageView1" />
        <ImageView android:id="@id/imageView3" android:paddingLeft="20.0dip" android:paddingTop="5.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="50.0dip" android:src="@drawable/blue_tuning_preview" android:layout_below="@id/imageView2" />
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/imageView0">
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                <Button android:textSize="10.0dip" android:id="@id/btnPreset1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/preset1_default_title" android:width="100.0dip" />
                <Button android:textSize="10.0dip" android:id="@id/btnPreset2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/preset2_default_title" android:width="100.0dip" />
                <Button android:textSize="10.0dip" android:id="@id/btnPreset3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/preset3_default_title" android:width="100.0dip" />
            </LinearLayout>
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:textSize="10.0dip" android:id="@id/btnPreset4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/preset4_default_title" android:width="100.0dip" />
                <Button android:textSize="10.0dip" android:id="@id/btnPreset5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/preset5_default_title" android:width="100.0dip" />
                <Button android:textSize="10.0dip" android:id="@id/btnPreset6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/preset6_default_title" android:width="100.0dip" />
            </LinearLayout>
            <LinearLayout android:layout_width="320.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                <TextView android:textSize="12.0dip" android:id="@id/textView1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/credits_presets" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>