<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center_horizontal" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:id="@id/gamma_red_text" android:paddingLeft="20.0dip" android:paddingTop="10.0dip" android:paddingRight="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/color_red_title" />
        <TextView android:id="@id/gamma_red_value" android:paddingLeft="20.0dip" android:paddingTop="10.0dip" android:paddingRight="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" />
        <SeekBar android:id="@id/gamma_red_seekbar" android:paddingLeft="20.0dip" android:paddingTop="2.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/gamma_red_text" />
        <TextView android:id="@id/gamma_green_text" android:paddingLeft="20.0dip" android:paddingTop="10.0dip" android:paddingRight="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/color_green_title" android:layout_below="@id/gamma_red_seekbar" />
        <TextView android:id="@id/gamma_green_value" android:paddingLeft="20.0dip" android:paddingTop="10.0dip" android:paddingRight="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/gamma_red_seekbar" android:layout_alignParentRight="true" />
        <SeekBar android:id="@id/gamma_green_seekbar" android:paddingLeft="20.0dip" android:paddingTop="2.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/gamma_green_text" />
        <TextView android:id="@id/gamma_blue_text" android:paddingLeft="20.0dip" android:paddingTop="10.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/color_blue_title" android:layout_below="@id/gamma_green_seekbar" />
        <TextView android:id="@id/gamma_blue_value" android:paddingLeft="20.0dip" android:paddingTop="10.0dip" android:paddingRight="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/gamma_green_seekbar" android:layout_alignParentRight="true" />
        <SeekBar android:id="@id/gamma_blue_seekbar" android:paddingLeft="20.0dip" android:paddingTop="2.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/gamma_blue_text" />
        <ImageView android:id="@id/black_scale_picture" android:paddingLeft="20.0dip" android:paddingTop="20.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:src="@drawable/color_tuning_preview" android:layout_below="@id/gamma_blue_seekbar" />
        <LinearLayout android:id="@id/linearLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/black_scale_picture">
            <Button android:id="@id/btnGammaDefault" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gamma_default_title" />
            <Button android:id="@id/btnGammaCM" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gamma_CM_title" />
            <Button android:id="@id/btnGammaBright" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gamma_bright_title" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>